summative.moria.Moria.scala.code
setDirection(Direction.EST)
while(!estFaceMur()){
  	if (!estSurBiscuit())
  		avance()
  	else
  		bougeBiscuit()
}
droite()
avance()
droite()
avance()


def bougeBiscuit(){
  prendBiscuit()
  setDirection(Direction.OUEST)
  avance()
  while(!estSurBiscuit())
  	avance()
  recule()
  poseBiscuit()
  setDirection(Direction.EST)
}